ec-pascal/Examples/bad/Example41.pas
Program Example4;
Const 
	name = 'Victor';
	
Var 
	surname: String;
     
Begin
	Writeln('Enter your surname:);
	readln(surname);
	writeln;
	writeln;
	Writeln('Your full name is: ',name,' ',surname);
	Readln;
End.
